--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "Good morning. How are you?": "Good morning. How are you?"
+  "home message": "This is the Home page",
+  "about message": "This is the About page",
+  "language": "English"
 }
+
